WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157025
DFG backends shouldn't emit type checks at KnownBlah edges
https://bugs.webkit.org/show_bug.cgi?id=157025
Summary
DFG backends shouldn't emit type checks at KnownBlah edges
Filip Pizlo
Reported
2016-04-25 22:42:38 PDT
Patch forthcoming.
Attachments
possible patch
(4.57 KB, patch)
2016-04-25 22:44 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(9.24 KB, patch)
2016-04-26 09:44 PDT
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-04-25 22:44:16 PDT
Created
attachment 277338
[details]
possible patch
WebKit Commit Bot
Comment 2
2016-04-25 22:45:28 PDT
Attachment 277338
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:102: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:123: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2016-04-26 09:44:11 PDT
Created
attachment 277390
[details]
the patch
WebKit Commit Bot
Comment 4
2016-04-26 09:45:39 PDT
Attachment 277390
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:102: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:123: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 5
2016-04-26 10:19:26 PDT
Comment on
attachment 277390
[details]
the patch r=me
Filip Pizlo
Comment 6
2016-04-26 11:03:08 PDT
Landed in
http://trac.webkit.org/changeset/200096
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug